# prusto-watch

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  README.md  calc_clock_positions.py  memory.x
.cargo/: config
data/: face_1bpp.raw  face_1bpp_neg.raw
examples/: ble_serial.rs  blinky-new.rs  blinky.rs  button.rs  graphics.rs  graphics_face.rs  my_face.rs  pwm_lcd_extcomin.rs  reset_ble.rs  serial_ble_driver.rs  serial_imu.rs  spi.rs  spi_lcd.rs  usb.rs  vibration_motor.rs
firmware/: Cargo.toml  memory.x
firmware/src/: main.rs
kicad/: COMPONENT_SELECTION.md  OpenWatch-rescue.lib  OpenWatch.kicad_pcb  OpenWatch.net  OpenWatch.pro  OpenWatch.sch  fp-lib-table
src/: ble.rs  display.rs  main.rs
stm32f303/: Cargo.toml  STM32F30x.svd
