[package]
authors = ["Byron Wasti"]
categories = [
    "embedded",
    "no-std",
]
description = ""
keywords = []
license = "MIT OR Apache-2.0"
name = "prusto-watch"
repository = ""
version = "0.1.0"

[dependencies]
cortex-m = "0.4"
cortex-m-rtfm = "0.3"
cortex-m-semihosting = "0.2.0"
nb = "0.1.1"

[dev-dependencies]
embedded-hal = "0.1.2"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.12"
embedded-hal = "0.1.2"

[dependencies.stm32f30x]
features = ["rt"]
version = "0.6"

[dependencies.stm32f30x-hal]
path = "../stm32f30x-hal"

[dev-dependencies.rn4870]
path = "../rn4870"

[dev-dependencies.ls010b7dh01]
path = "../ls010b7dh01"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
