[package]
authors = ["Byron Wasti"]
categories = [
    "embedded",
    "no-std",
]
description = ""
keywords = []
license = "MIT OR Apache-2.0"
name = "prusto-watch"
repository = ""
version = "0.1.0"

[dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
cortex-m-rtfm = "0.3.2"
cortex-m-semihosting = "0.2.0"
embedded-graphics = "0.1.1"
embedded-hal = "0.1.2"
nb = "0.1.1"
panic-abort = "0.1.1"

[dependencies.stm32f30x-hal]
path = "../stm32f30x-hal"
[dev-dependencies.ls010b7dh01]
path = "../ls010b7dh01"

[dev-dependencies.rn4870]
path = "../rn4870"
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
