[package]
authors = ["Byron Wasti, Alex Hoppe"]
categories = [
    "embedded",
    "no-std",
]
description = ""
keywords = []
license = "MIT OR Apache-2.0"
name = "open-watch"
repository = ""
version = "0.1.0"

[dependencies]
cortex-m = "0.3.1"
cortex-m-rtfm = "0.2.2"

[dependencies.stm32f303]
features = ["rt"]
path = "../stm32f303"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[dependencies.cortex-m-semihosting]
version = "0.2.0"

[profile.release]
debug = true
lto = true
